# genai-python-template

./: .dockerignore  .editorconfig  .env.example  .gitignore  .pre-commit-config.yaml  API.md  AUTOMATION.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  DATA_ARCHITECTURE.md  DATA_ENGINEERING.md  DECISIONS.md  DEPLOYMENT.md  Dockerfile  EVALUATION.md  GOVERNANCE.md  MACHINE_LEARNING.md  MCP.md  PROMPTS.md  RAG.md  README.md  SETUP_GUIDE.es.md  SETUP_GUIDE.md  STREAMING.md  TESTING.md  docker-compose.yml  pyproject.toml  sonar-project.properties
.claude/: settings.json.example
.claude/commands/: create-agent.md  create-endpoint.md  create-rag-pipeline.md  generate-tests.md  review-arch.md  review-security.md  review-tests.md  validate-architecture.md
.claude/hooks/: pre-commit  pre-push
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  validate_skills.yml
ai_context/: AGENTS.md  ANALYTICS.md  API.md  ARCHITECTURE.md  DATABASES.md  DATA_ENGINEERING.md  DEPLOYMENT.md  EVENT_DRIVEN.md  GOVERNANCE.md  OBSERVABILITY.md  README.md  RULES.md  SECURITY.md  TOOLS.md
ai_context/examples/: README.md  __init__.py
ai_context/skills/: analytics.md  api_streaming.md  automation.md  cloud_infrastructure.md  data_ml_engineering.md  databases.md  event_driven_systems.md  genai_rag.md  governance.md  mcp.md  multi_agent_systems.md  observability_monitoring.md  security.md  software_architecture.md  testing_quality.md
deploy/aws/: template.yaml
deploy/gcp/: Dockerfile  cloudbuild.yaml
deploy/terraform/: main.tf  outputs.tf  terraform.tfvars.example  variables.tf
docs/: GUIA_SETUP_PROYECTO_CLAUDE.md  SKILL_VALIDATION_PROMPT.md
docs/skills/: analytics.md  api_streaming.md  automation.md  cloud_infrastructure.md  code_quality_sonar.md  context_engineering.md  data_ml_engineering.md  databases.md  design_patterns.md  email_transactional.md  event_driven_systems.md  external_integrations.md  file_upload_storage.md  fulltext_search.md  genai_rag.md  governance.md  hallucination_detection.md  mcp.md  multi_agent_systems.md  multi_tenancy.md  observability_monitoring.md  pagination_export.md  performance_profiling.md  prompt_engineering.md  security.md  software_architecture.md  testing_quality.md
scripts/: export_context_kit.py  new-project.sh  setup-global.sh
src/application/: __init__.py
src/domain/: __init__.py  events.py  exceptions.py
src/infrastructure/: __init__.py  container.py
src/interfaces/: __init__.py
tests/: conftest.py  factories.py
tests/evaluation/: __init__.py  conftest.py  test_rag_quality.py
tests/examples/: test_llm_examples.py
tests/golden/: pii_samples.json  rag_queries.json
tests/integration/: conftest.py  test_data_routes.py  test_health.py  test_middleware.py  test_rag_routes.py  (+1 more)
(+340 files in other folders)
